[package]
name = "discord-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
envy = "0.4.2"
image = "0.25.6"
reqwest = { version = "0.12.12", features = ["multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.139"
serenity = { version = "0.12.4", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
